kubernetes/apps/media/jellyfin/httproute.yaml
---
# yaml-language-server: $schema=https://kube-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
spec:
  hostnames: ["jf.vzkn.eu"]
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: jellyfin
          namespace: media
          port: 8096
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: Cross-Origin-Resource-Policy
                value: "cross-origin"
              - name: Access-Control-Allow-Origin
                value: "*"
